@@ -328,9 +328,6 @@ namespace CAT {
     m.message("pmax",pmax,"MeV",mybhep::NORMAL); 
     m.message("small radius",SmallRadius,"mm",mybhep::NORMAL); 
     m.message("tangent phi: ",TangentPhi,mybhep::NORMAL); 
-    cout << " aaa cout " << std::endl;
-    std::clog << " aaa  std::clog " << std::endl;
-    m.message(" aaa message ", mybhep::NORMAL);
     m.message("tangent theta",TangentTheta,mybhep::NORMAL); 
     m.message("small number",SmallNumber,"mm",mybhep::NORMAL); 
     m.message("quadrant angle",QuadrantAngle,mybhep::NORMAL); 
